--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,6 @@
   "css": "tts-bar.css",
   "author": "powercaller",
   "version": "0.1.0",
-  "homePage": "",
+  "homePage": "https://github.com/powercaller/extension-tts-bar",
   "auto_update": true
 }
