--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "display_name": "TTS-Bar",
-  "loading_order": 11,
+  "loading_order": 999,
   "requires": [],
   "optional": [],
   "js": "tts-bar.js",
   "css": "tts-bar.css",
   "author": "powercaller",
-  "version": "0.2.0",
-  "homePage": "https://github.com/powercaller/extension-tts-bar",
+  "version": "0.2.1",
+  "homePage": "",
   "auto_update": true
 }
